--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,15 @@ pytest==7.4.0
 pytest-cov==4.1.0
 pylint==2.17.5
 black==23.7.0
+bcrypt==4.0.1
 fire==0.5.0
+Flask==2.3.2
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.2
+flask-sqlalchemy==3.0.5
+SQLAlchemy==2.0.18
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
+PyJWT==2.8.0
+python-dateutil==2.8.2
+itsdangerous==2.1.2
