--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ fire==0.5.0
 Flask==2.3.2
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.2
+Flask-Mail
 flask-sqlalchemy==3.0.5
 SQLAlchemy==2.0.18
 google-auth==2.22.0
