--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pylint==2.17.5
 black==23.7.0
 bcrypt==4.0.1
 fire==0.5.0
-Flask==2.3.2
+Flask==2.3.0
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.2
 Flask-Mail
@@ -17,3 +17,4 @@ PyJWT==2.8.0
 python-dateutil==2.8.2
 itsdangerous==2.1.2
 python-dotenv==1.0.0
+Werkzeug==2.3.0
